--- a/index.html
+++ b/index.html
@@ -134,16 +134,20 @@
         }
 
         .nav-cta {
-            background: var(--primary);
-            color: white !important;
-            padding: 0.75rem 1.5rem;
-            border-radius: 5px;
+            background: transparent;
+            color: var(--primary) !important;
+            padding: 0.6rem 1.25rem;
+            border: 2px solid var(--primary);
+            border-radius: 25px;
             transition: all 0.3s ease !important;
+            font-weight: 700;
         }
 
         .nav-cta:hover {
-            background: var(--primary-dark);
+            background: var(--primary);
+            color: white !important;
             transform: translateY(-2px);
+            box-shadow: 0 5px 20px rgba(227, 28, 37, 0.3);
         }
 
         .nav-cta::after {
@@ -210,7 +214,7 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background: linear-gradient(to bottom, rgba(227, 28, 37, 0.85) 0%, rgba(183, 28, 28, 0.9) 100%);
+            background: linear-gradient(to bottom, rgba(0, 0, 0, 0.4) 0%, rgba(0, 0, 0, 0.6) 100%);
         }
 
         .hero-content {
@@ -738,9 +742,13 @@
             display: flex;
             align-items: center;
             justify-content: center;
-            font-size: 1.2rem;
             color: white;
             flex-shrink: 0;
+        }
+
+        .contact-details .icon svg {
+            width: 24px;
+            height: 24px;
         }
 
         .contact-details .info strong {
@@ -1405,14 +1413,23 @@
                 
                 <ul class="contact-details">
                     <li>
-                        <div class="icon">📞</div>
+                        <div class="icon">
+                            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                                <path d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z"/>
+                            </svg>
+                        </div>
                         <div class="info">
                             <strong>Contacto 24/7</strong>
                             <span>+502 4585-7699</span>
                         </div>
                     </li>
                     <li>
-                        <div class="icon">🏢</div>
+                        <div class="icon">
+                            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                                <path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"/>
+                                <polyline points="9 22 9 12 15 12 15 22"/>
+                            </svg>
+                        </div>
                         <div class="info">
                             <strong>Oficina</strong>
                             <span>+502 2385-7077/8</span>
@@ -1420,10 +1437,15 @@
                         </div>
                     </li>
                     <li>
-                        <div class="icon">✉️</div>
+                        <div class="icon">
+                            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                                <path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"/>
+                                <polyline points="22,6 12,13 2,6"/>
+                            </svg>
+                        </div>
                         <div class="info">
                             <strong>Email</strong>
-                            <span><a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="f49c9c91869a959a90918eb484869b999b87919381869b87da979b99">[email&#160;protected]</a></span>
+                            <span>hhernandez@promoseguros.com</span>
                         </div>
                     </li>
                 </ul>
@@ -1523,7 +1545,7 @@
                     <li><a href="#contacto">Cotización</a></li>
                     <li><a href="tel:+50245857699">+502 4585-7699</a></li>
                     <li><a href="tel:+50223857077">+502 2385-7077/8</a></li>
-                    <li><a href="/cdn-cgi/l/email-protection#4b23232e39252a252f2e310b3b39242624382e2c3e39243865282426">Email</a></li>
+                    <li><a href="mailto:hhernandez@promoseguros.com">Email</a></li>
                 </ul>
             </div>
         </div>
@@ -1538,7 +1560,7 @@
         </div>
     </footer>
 
-    <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script>
+    <script>
         // Mobile menu toggle
         const menuToggle = document.getElementById('menuToggle');
         const navLinks = document.getElementById('navLinks');
@@ -1633,4 +1655,12 @@
             });
         }, observerOptions);
 
-        document.querySelectorAll('.service-card, .material-item, 
+        document.querySelectorAll('.service-card, .material-item, .technique-card, .about-item').forEach(el => {
+            el.style.opacity = '0';
+            el.style.transform = 'translateY(30px)';
+            el.style.transition = 'opacity 0.6s ease, transform 0.6s ease';
+            observer.observe(el);
+        });
+    </script>
+</body>
+</html>
