Imagenes alta calidad, boton cotizar, iconos contacto

--- a/index.html
+++ b/index.html
@@ -1142,23 +1142,23 @@
     <section class="hero" id="inicio">
         <div class="carousel">
             <div class="carousel-slide active">
-                <img src="images/hero-1.png" alt="Publicidad en puentes - Malher">
+                <img src="images/hero-1.jpeg" alt="Vallas publicitarias">
                 <div class="carousel-overlay"></div>
             </div>
             <div class="carousel-slide">
-                <img src="images/hero-2.jpeg" alt="Vallas publicitarias">
+                <img src="images/hero-2.jpeg" alt="Circuito de vallas KM 17.5">
                 <div class="carousel-overlay"></div>
             </div>
             <div class="carousel-slide">
-                <img src="images/hero-3.png" alt="Rotulación de fachadas">
+                <img src="images/hero-3.jpeg" alt="Valla Fraijanes">
                 <div class="carousel-overlay"></div>
             </div>
             <div class="carousel-slide">
-                <img src="images/hero-4.jpg" alt="Circuito de vallas">
+                <img src="images/hero-4.jpeg" alt="Publicidad exterior">
                 <div class="carousel-overlay"></div>
             </div>
             <div class="carousel-slide">
-                <img src="images/hero-5.png" alt="Rotulación vehicular">
+                <img src="images/hero-5.jpeg" alt="Cambio de imagen">
                 <div class="carousel-overlay"></div>
             </div>
         </div>
