--- a/index.html
+++ b/index.html
@@ -1451,45 +1451,47 @@
                 </ul>
             </div>
 
-            <form class="contact-form">
+            <form class="contact-form" action="https://formspree.io/f/mlgggbwn" method="POST">
                 <div class="form-group">
                     <label for="name">Nombre Completo</label>
-                    <input type="text" id="name" placeholder="Tu nombre" required>
+                    <input type="text" id="name" name="nombre" placeholder="Tu nombre" required>
                 </div>
                 <div class="form-group">
                     <label for="company">Empresa (Opcional)</label>
-                    <input type="text" id="company" placeholder="Nombre de tu empresa">
+                    <input type="text" id="company" name="empresa" placeholder="Nombre de tu empresa">
                 </div>
                 <div class="form-group">
                     <label for="email">Correo Electrónico</label>
-                    <input type="email" id="email" placeholder="tu@email.com" required>
+                    <input type="email" id="email" name="email" placeholder="tu@email.com" required>
                 </div>
                 <div class="form-group">
                     <label for="phone">Teléfono</label>
-                    <input type="tel" id="phone" placeholder="+502 0000-0000">
+                    <input type="tel" id="phone" name="telefono" placeholder="+502 0000-0000">
                 </div>
                 <div class="form-group">
                     <label for="service">Servicio de Interés</label>
-                    <select id="service">
+                    <select id="service" name="servicio">
                         <option value="">Selecciona un servicio</option>
-                        <option value="vallas">Vallas Publicitarias</option>
-                        <option value="puentes">Puentes Publicitarios</option>
-                        <option value="torres">Torres y Tótems</option>
-                        <option value="fachadas">Fachadas Comerciales</option>
-                        <option value="rotulos">Rótulos y Señalización</option>
-                        <option value="vehicular">Rotulación Vehicular</option>
-                        <option value="impresion">Impresión Digital</option>
-                        <option value="mantenimiento">Mantenimiento</option>
-                        <option value="sublimacion">Sublimación</option>
-                        <option value="bordado">Bordados</option>
-                        <option value="serigrafia">Serigrafía</option>
-                        <option value="otro">Otro</option>
+                        <option value="Vallas Publicitarias">Vallas Publicitarias</option>
+                        <option value="Puentes Publicitarios">Puentes Publicitarios</option>
+                        <option value="Torres y Tótems">Torres y Tótems</option>
+                        <option value="Fachadas Comerciales">Fachadas Comerciales</option>
+                        <option value="Rótulos y Señalización">Rótulos y Señalización</option>
+                        <option value="Rotulación Vehicular">Rotulación Vehicular</option>
+                        <option value="Impresión Digital">Impresión Digital</option>
+                        <option value="Mantenimiento">Mantenimiento</option>
+                        <option value="Sublimación">Sublimación</option>
+                        <option value="Bordados">Bordados</option>
+                        <option value="Serigrafía">Serigrafía</option>
+                        <option value="Otro">Otro</option>
                     </select>
                 </div>
                 <div class="form-group">
                     <label for="message">Mensaje</label>
-                    <textarea id="message" placeholder="Cuéntanos sobre tu proyecto..." required></textarea>
+                    <textarea id="message" name="mensaje" placeholder="Cuéntanos sobre tu proyecto..." required></textarea>
                 </div>
+                <input type="hidden" name="_subject" value="Nueva cotización - Promociones Seguras">
+                <input type="hidden" name="_next" value="https://promo-seguros-s-a.vercel.app/#contacto">
                 <button type="submit" class="btn btn-primary">Enviar Mensaje</button>
             </form>
         </div>
@@ -1588,13 +1590,6 @@
                     });
                 }
             });
-        });
-
-        // Form submission
-        document.querySelector('.contact-form').addEventListener('submit', function(e) {
-            e.preventDefault();
-            alert('¡Gracias por tu mensaje! Nos pondremos en contacto contigo pronto.');
-            this.reset();
         });
 
         // Carousel functionality
